--- a/linearregression.ipynb
+++ b/linearregression.ipynb
@@ -331,7 +331,7 @@
     "This tells us that the error can be decomposed into bias and variance, quantifying the bias-tradeoff variance.\n",
     "\n",
     "<center>\n",
-    "<img src=\"https://www.cs.cornell.edu/courses/cs4780/2018fa/lectures/images/bias_variance/bullseye.png\" alt=\"BiasVariance\" width=\"500\"/>\n",
+    "<img src=\"https://www.cs.cornell.edu/courses/cs4780/2018fa/lectures/images/bias_variance/bullseye.png\" width=\"500\" />\n",
     "</center>\n",
     "\n",
     "## BLUE: Best Linear Unbiased Estimator\n",
