--- a/linearregression.ipynb
+++ b/linearregression.ipynb
@@ -330,9 +330,7 @@
     "Suppose that we want to predict a certain parameter $\\theta$, and we have some estimator $\\widehat{\\theta}$. We say that the estimator is <i>unbiased</i> if $\\mathbb{E}(\\widehat{\\theta}) = \\theta$. More generally, the bias of an estimator is $\\mathrm{bias}(\\widehat{\\theta}) = \\mathbb{E}(\\widehat{\\theta}) - \\theta$. In other words, the bias is the error that comes from the estimator itself. On the other hand, the <i>variance</i> is the sensitivity that comes from the training data. The mean squared error can be written as $$\\begin{align*}\\mathrm{MSE}(\\widehat{\\theta},\\theta) = \\mathbb{E}((\\widehat{\\theta}-\\theta)^2) &= (\\mathbb{E}(\\widehat{\\theta})-\\theta)^2 + \\mathbb{E}((\\widehat{\\theta} - \\mathrm{E}(\\widehat{\\theta}))^2) \\\\ &= \\mathrm{bias}(\\theta,\\widehat{\\theta})^2 + \\mathrm{Var}(\\widehat{\\theta}).\\end{align*}$$\n",
     "This tells us that the error can be decomposed into bias and variance, quantifying the bias-tradeoff variance.\n",
     "\n",
-    "<center>\n",
-    "<img src=\"https://www.cs.cornell.edu/courses/cs4780/2018fa/lectures/images/bias_variance/bullseye.png\" width=\"500\" />\n",
-    "</center>\n",
+    "![BiasVariance](https://www.cs.cornell.edu/courses/cs4780/2018fa/lectures/images/bias_variance/bullseye.png)\n",
     "\n",
     "## BLUE: Best Linear Unbiased Estimator\n",
     "\n",
